src/styles.css
/* --- PERMANENT STYLES FOR BUTTONS --- */
.pro-icon {
    display: block;
    margin: 0 auto 5px auto; /* Centers the icon horizontally */
    width: 22px;
    height: 22px;
}

.code-timestamp {
    height: 100%;
    align-items: center;
    display: inline-flex;
    float: right;
    margin-right: 10px;
}

body:not(.pro-layout-active) .code-timestamp {
    display: none;
}

body.pro-layout-active .code-timestamp {
    position: absolute;
    top: 0;
    right: 10px;
    float: none;
    margin-right: 0;
    pointer-events: none;
}

/* --- TOGGLEABLE STYLES FOR THE "PRO LAYOUT" --- */
/* These rules only apply when the body has our custom class */
body.pro-layout-active .cg-ide .code-bloc,
body.pro-layout-active .statement-resize-handle {
    display: none !important;
}

body.pro-layout-active .cg-ide .statement-bloc {
    top: 0 !important;
    bottom: 252px !important;
    height: auto !important;
}

body.pro-layout-active .cg-ide .testcases-actions-container {
    height: 252px !important;
    top: auto !important;
    bottom: 0 !important;
    left: 0 !important;
}

body.pro-layout-active .cg-ide .console-bloc {
    height: auto !important;
    top: 0 !important;
    bottom: 0 !important;
    right: 0 !important;
    margin-top: 0;
}

